[package]
name = "cdn"
version = "0.1.0"
authors = ["LuckShiba <LuckShiba@protonmail.com>"]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "^0.5.0"
actix-multipart = "^0.3.0"
futures = "^0.3.15"
sanitize-filename = "^0.3.0"
dotenv = "^0.15.0"
lazy_static = "^1.4.0"
